# mightyChatbot

./: .gitignore  CLAUDE.md  LEARNING-LOG.md  README.md
backend/: .env.example  Dockerfile  fly.toml  pyproject.toml
backend/app/: config.py  main.py
backend/app/routes/: chat.py  health.py
backend/app/services/: intent_router.py  llm.py  orders.py
backend/tests/: test_chat.py  test_health.py  test_orders.py
eval/: README.md
frontend/app/: layout.tsx
frontend/components/: chat.tsx
frontend/lib/: api.ts
